# clock

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  create-release.yml  pypi.yml  release.yml  wheel.yml
docs/: api.md  index.md
src/clock/: __init__.py  clock.py
src/ga_clock/: __init__.py  _api.py  _version.py  clock.py  exceptions.py
tests/: test_api.py  test_clock.py  test_ga_clock.py  test_version.py
