[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "clock"
version = "0.1.0"
description = "A controllable Python clock with realtime, accelerated, fixed, scheduled, and manual time modes."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Clock contributors" }
]
keywords = ["clock", "scheduler", "time", "testing", "simulation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=7.4",
  "ruff>=0.6"
]

[tool.hatch.build.targets.wheel]
packages = ["src/clock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
