[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ga-clock"
dynamic = ["version"]
description = "GA Clock is a controllable Python clock with realtime, accelerated, fixed, scheduled, and manual time modes."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "GA Clock contributors" }
]
keywords = ["ga-clock", "clock", "scheduler", "time", "testing", "simulation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed"
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0"
]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "twine>=5.1"
]

[project.urls]
Documentation = "https://github.com/andreagemma/clock#readme"
Issues = "https://github.com/andreagemma/clock/issues"
Source = "https://github.com/andreagemma/clock"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ga_clock = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "ga_clock._version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["ga_clock"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
